# from-one-hot-to-llm

./: .gitignore  LICENSE  README.md  pyproject.toml
chap0/: markov.ipynb
chap1/: deep.ipynb
chap2/: nlm.ipynb
chap3/: transformer.ipynb
chap4/: tok.ipynb
